# deep-learning-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml
configs/: starter.yml
cool_project/: config.py  dataset.py  pipeline.py
cool_project/callbacks/: __init__.py
cool_project/data/datasets/: __init__.py
cool_project/data/samplers/: __init__.py
cool_project/losses/: __init__.py  focal.py
cool_project/models/: __init__.py  baseline.py
cool_project/optims/: __init__.py
scripts/: train.py
tests/components/: test_config.py
